fix units dont 'fit' in page issue (line-spacing)

--- a/scss/femtocss.scss
+++ b/scss/femtocss.scss
@@ -25,7 +25,7 @@ p{
 
 /* Grid system */
 .grid{
-  letter-spacing: -0.31em;
+  letter-spacing: -0.35em;
 }
 
 .unit,
